--- a/src/app/modules/dashboard/pages/other-tools/other-tools.component.html
+++ b/src/app/modules/dashboard/pages/other-tools/other-tools.component.html
@@ -10,7 +10,7 @@
                 <span class="h2 py-2 ml-3 mr-3">OmniChat</span>
             </a>
         </li>
-        <li class="nav-item" *ngIf="latamView || (countryID === 9 && ! retailerID) || retailerID === 29">
+        <li class="nav-item" *ngIf="selectedLevelPage.latam || (countryID === 9 && !retailerID) || retailerID === 29">
             <a class="nav-link" [ngClass]="{'active bg-light' : activeTabView === 3}" (click)="activeTabView = 3">
                 <span class="h2 py-2 ml-3 mr-3">PC Selector</span>
             </a>
@@ -22,7 +22,8 @@
     </ng-container>
 
     <ng-container *ngIf="activeTabView === 2">
-        <app-omnichat-wrapper></app-omnichat-wrapper>
+        <app-omnichat-wrapper [requestInfoChange]="requestInfoChange$" [selectedLevelPage]="selectedLevelPage">
+        </app-omnichat-wrapper>
     </ng-container>
 
     <ng-container *ngIf="activeTabView === 3">
