--- a/src/app/modules/auth/pages/login/login.component.html
+++ b/src/app/modules/auth/pages/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="container pb-4 pt-5 pb-md-7 pt-md-9">
+<div class="container">
   <div class="row justify-content-start">
     <div class="col-lg-5 col-md-7">
       <div class="card shadow border-0">
