--- a/src/app/modules/auth/pages/forgot-psw/forgot-psw.component.scss
+++ b/src/app/modules/auth/pages/forgot-psw/forgot-psw.component.scss
@@ -1,3 +1,19 @@
-.logo-container img {
-    width: 80px;
+.container {
+    height: 100%;
+    min-height: 100vh;
+
+    @media screen and (max-height: 690px) {
+        margin-bottom: 1.5rem;
+        margin-top: 1.5rem;
+    }
+
+    .justify-content-start {
+        align-items: center;
+        height: 100%;
+        min-height: 100vh;
+    }
+
+    .logo-container img {
+        width: 80px;
+    }
 }
