--- a/src/app/modules/dashboard/pages/home/home.component.html
+++ b/src/app/modules/dashboard/pages/home/home.component.html
@@ -2,8 +2,8 @@
     <!-- LANDSCAPE VIEW -->
 
     <!-- admin & hp roles -->
-    <video [muted]="true" *ngIf="userRoleName === 'admin' || userRoleName === 'hp'" class="media landscape md" autoplay
-        loop>
+    <video *ngIf="userRoleName === 'admin' || userRoleName === 'hp'" class="media landscape md" autoplay loop
+        [muted]="true">
         <source src="assets/video/map-retailers-landscape.mp4" type="video/mp4">
     </video>
 
@@ -16,8 +16,8 @@
     <!-- LANDSCAPE LARGE VIEW -->
 
     <!-- admin & hp roles -->
-    <video [muted]="true" *ngIf="userRoleName === 'admin' || userRoleName === 'hp'" class="media landscape lg" autoplay
-        loop>
+    <video *ngIf="userRoleName === 'admin' || userRoleName === 'hp'" class="media landscape lg" autoplay loop
+        [muted]="true">
         <source src="assets/video/map-retailers-landscape-lg.mp4" type="video/mp4">
     </video>
     <!-- country & retailer roles -->
@@ -29,8 +29,8 @@
     <!-- PORTRAIT VIEW -->
 
     <!-- admin & hp roles -->
-    <video [muted]="true" *ngIf="userRoleName === 'admin' || userRoleName === 'hp'" class="media portrait" autoplay
-        loop>
+    <video *ngIf="userRoleName === 'admin' || userRoleName === 'hp'" class="media portrait" autoplay loop
+        [muted]="true">
         <source src="assets/video/map-retailers-portrait.mp4" type="video/mp4">
     </video>
 
