--- a/src/app/modules/dashboard/components/generic-table/generic-table.component.html
+++ b/src/app/modules/dashboard/components/generic-table/generic-table.component.html
@@ -3,10 +3,11 @@
         <mat-spinner></mat-spinner>
     </div>
 
-    <table mat-table [dataSource]="dataSource">
+    <table mat-table [dataSource]="dataSource" matSort>
         <ng-container *ngFor="let column of displayedColumns">
             <ng-container [matColumnDef]="column.name">
-                <th mat-header-cell [style.text-align]="column.textAlign ? column.textAlign : 'left'" *matHeaderCellDef>
+                <th mat-header-cell *matHeaderCellDef mat-sort-header
+                    [ngClass]="column.textAlign ? column.textAlign + '-align' : 'left-align'">
                     {{ column.title }}
                 </th>
 
