hide categories filter in pc selector section (#203)
* add hideCategory observable and method in general-filters service

* use hideCategories method in other-tools component

* add hideCategorySub subscription in general-filters component

* remove log line in indexed-wrapper component

* remove redundant lines of code in other-tools component

--- a/src/app/modules/dashboard/components/general-filters/general-filters.component.html
+++ b/src/app/modules/dashboard/components/general-filters/general-filters.component.html
@@ -179,7 +179,8 @@
         </div>
 
         <!-- category -->
-        <div class="col-12 col-sm-6 mb-4" [ngClass]="{'col-lg-3' : !isLatamSelected, 'col-lg-2' : isLatamSelected}">
+        <div [hidden]="hideCategories" class="col-12 col-sm-6 mb-4"
+            [ngClass]="{'col-lg-3' : !isLatamSelected, 'col-lg-2' : isLatamSelected}">
             <span class="mb-1 h4">{{ 'general.category' | translate }}</span>
             <mat-select formControlName="categories" multiple [placeholder]="'filters.categoryPh' | translate"
                 disableOptionCentering>
