--- a/src/app/modules/dashboard/components/omnichat-wrapper/omnichat-wrapper.component.html
+++ b/src/app/modules/dashboard/components/omnichat-wrapper/omnichat-wrapper.component.html
@@ -19,13 +19,13 @@
             <ul class="nav nav-pills nav-fill">
                 <li class="nav-item">
                     <a class="nav-link p-2" [ngClass]="{'active': selectedTab1 === 1}"
-                        (click)="getUsersOrAup('conversions-vs-users');">
+                        (click)="getUsersOrRevenue('conversions-vs-users');">
                         {{ 'general.usersVsSales' | translate }}
                     </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link p-2" [ngClass]="{'active': selectedTab1 === 2}"
-                        (click)="getUsersOrAup('aup-vs-revenue')">
+                        (click)="getUsersOrRevenue('aup-vs-revenue')">
                         {{ 'general.revenueVsAup' | translate }}
                     </a>
                 </li>
@@ -38,18 +38,17 @@
             <div class="card-header">
                 <ng-container [ngSwitch]="selectedTab1">
                     <span class="h4" *ngSwitchCase="1">{{ 'general.usersVsSales' | translate }}</span>
-                    <span class="h4" *ngSwitchCase="2">{{ 'general.investmentVsRevenue' | translate }}</span>
-                    <span class="h4" *ngSwitchCase="3">{{ 'general.revenueVsAup' |translate }}</span>
+                    <span class="h4" *ngSwitchCase="2">{{ 'general.revenueVsAup' |translate }}</span>
                 </ng-container>
             </div>
             <div class="card-body">
-                <app-chart-multiple-axes [data]="usersAndRevenue"
+                <app-chart-multiple-axes [data]="usersOrRevenue"
                     [value1]="selectedTab1 === 1 ? 'transactions' : 'revenue'"
                     [value2]="selectedTab1 === 1 ? 'users' : 'aup'"
                     [valueName1]="selectedTab1 === 1 ? 'Conversiones' : 'Revenue'"
                     [valueName2]="selectedTab1 === 1 ? 'Usuarios' : 'AUP'" [valueFormat1]="selectedTab1 === 2 && 'USD'"
                     [valueFormat2]="selectedTab1 === 2 && 'USD'" name="omnichat-traffic-vs-conversions"
-                    [status]="usersAndRevenueReqStatus">
+                    [status]="usersOrRevenueReqStatus">
                 </app-chart-multiple-axes>
             </div>
         </div>
@@ -118,7 +117,8 @@
         <div class="card height-fluid">
             <div class="card-header">
                 <span class="h4" *ngIf="!levelPage.retailer">
-                    {{ selectedTab2 === 1 ? 'Tráfico' : 'Conversiones' }} por categoría</span>
+                    {{ selectedTab2 === 1 ? 'Tráfico' : 'Conversiones' }} por categoría
+                </span>
                 <span class="h4" *ngIf="levelPage.retailer">Tráfico por categoría</span>
             </div>
             <div class="card-body">
@@ -240,11 +240,11 @@
                 <div class="pills-container">
                     <ul class="nav nav-pills nav-fill">
                         <li class="nav-item">
-                            <a class="nav-link p-2" [ngClass]="{'active': selectedTab3 === 1}"
+                            <a class="nav-link p-2" [ngClass]="{'active': selectedTab4 === 1}"
                                 (click)="getAudienceByMetric('traffic'); chartsInitLoad = chartsInitLoad && false;">Tráfico</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link p-2" [ngClass]="{'active': selectedTab3 === 2}"
+                            <a class="nav-link p-2" [ngClass]="{'active': selectedTab4 === 2}"
                                 (click)="getAudienceByMetric('sales'); chartsInitLoad = chartsInitLoad && false;">Conversiones</a>
                         </li>
                     </ul>
@@ -255,7 +255,9 @@
             <div class="col-12 col-md-6 mt-4">
                 <div class="card height-fluid">
                     <div class="card-header">
-                        <span class="h4">{{selectedTab3 === 1 ? 'Tráfico' : 'Conversiones'}} por dispositivos</span>
+                        <span class="h4">
+                            {{selectedTab4 === 1 ? 'Tráfico' : 'Conversiones'}} por dispositivos
+                        </span>
                     </div>
                     <div class="card-body">
                         <div class="row">
@@ -292,7 +294,9 @@
             <div class="col-12 col-md-6 mt-4">
                 <div class="card height-fluid">
                     <div class="card-header">
-                        <span class="h4">{{selectedTab3 === 1 ? 'Tráfico' : 'Conversiones'}} por Género</span>
+                        <span class="h4">
+                            {{selectedTab4 === 1 ? 'Tráfico' : 'Conversiones'}} por Género
+                        </span>
                     </div>
                     <div class="card-body">
                         <div class="row">
@@ -330,11 +334,13 @@
             <div class="col-12 col-md-6 mt-4">
                 <div class="card height-fluid">
                     <div class="card-header">
-                        <span class="h4">{{selectedTab3 === 1 ? 'Tráfico' : 'Conversiones'}} por Edad</span>
+                        <span class="h4">
+                            {{selectedTab4 === 1 ? 'Tráfico' : 'Conversiones'}} por Edad
+                        </span>
                     </div>
                     <div class="card-body">
                         <app-chart-lollipop [data]="audience?.age" name="omnichat-age" category="age"
-                            [value]="selectedTab3 === 1 ? 'visits' : 'sales'" height="280px"
+                            [value]="selectedTab4 === 1 ? 'visits' : 'sales'" height="280px"
                             [status]="audienceReqStatus[2].reqStatus">
                         </app-chart-lollipop>
                     </div>
@@ -345,7 +351,9 @@
             <div class="col-12 col-md-6 mt-4">
                 <div class="card height-fluid">
                     <div class="card-header">
-                        <span class="h4">{{selectedTab3 === 1 ? 'Tráfico' : 'Conversiones'}} por Género y Edad</span>
+                        <span class="h4">
+                            {{selectedTab4 === 1 ? 'Tráfico' : 'Conversiones'}} por Género y Edad
+                        </span>
                     </div>
                     <div class="card-body" style="height: 328px">
                         <!-- loader -->
@@ -379,8 +387,9 @@
             <div class="col-12 col-lg-6 mt-4">
                 <div class="card height-fluid">
                     <div class="card-header">
-                        <span class="h4">{{selectedTab3 === 1 ? 'Tráfico' : 'Conversiones'}}
-                            por día de la semana y hora del día</span>
+                        <span class="h4">
+                            {{selectedTab4 === 1 ? 'Tráfico' : 'Conversiones'}} por día de la semana y hora del día
+                        </span>
                     </div>
                     <div class="card-body">
                         <app-chart-heat-map [data]="audience?.weekdayAndHour" name="omnichat-weekday-sesions"
@@ -394,8 +403,9 @@
                 <!-- weekday -->
                 <div class="card">
                     <div class="card-header">
-                        <span class="h4">{{selectedTab3 === 1 ? 'Tráfico' : 'Conversiones'}}
-                            por día de la semana</span>
+                        <span class="h4">
+                            {{selectedTab4 === 1 ? 'Tráfico' : 'Conversiones'}} por día de la semana
+                        </span>
                     </div>
                     <div class="card-body">
                         <app-chart-bar-horizontal [data]="audience?.weekday" name="omnichat-traffic-day"
@@ -408,8 +418,9 @@
                 <div class="card mt-4">
                     <!-- hour -->
                     <div class="card-header">
-                        <span class="h4">{{selectedTab3 === 1 ? 'Tráfico' : 'Conversiones'}}
-                            por hora del día</span>
+                        <span class="h4">
+                            {{selectedTab4 === 1 ? 'Tráfico' : 'Conversiones'}} por hora del día
+                        </span>
                     </div>
                     <div class="card-body">
                         <app-chart-lollipop [data]="audience?.hour" name="omnichat-traffic-hour" category="hour"
