add formatValue property to chart-heat-map of overview-latam component

--- a/src/app/modules/dashboard/pages/overview-latam/overview-latam.component.html
+++ b/src/app/modules/dashboard/pages/overview-latam/overview-latam.component.html
@@ -50,7 +50,7 @@
                             categoryX="country"
                             [categoryY]="selectedTab1 === 1 ? 'sector' : selectedTab1 === 2 ? 'category' : 'fund'"
                             height="250px" [showGridBorders]="true" [showHeatLegend]="false"
-                            [status]="categoriesReqStatus" gridBordersColor="#f7f7f7">
+                            [status]="categoriesReqStatus" formatValue="USD" gridBordersColor="#f7f7f7">
                         </app-chart-heat-map>
                     </div>
                 </div>
