--- a/src/app/modules/users-mngmt/components/users-list/users-list.component.html
+++ b/src/app/modules/users-mngmt/components/users-list/users-list.component.html
@@ -44,6 +44,18 @@
                 <td mat-cell *matCellDef="let element"> {{element.email}} </td>
             </ng-container>
 
+            <!-- first_name column -->
+            <ng-container matColumnDef="first_name">
+                <th mat-header-cell *matHeaderCellDef> Nombre </th>
+                <td mat-cell *matCellDef="let element"> {{element.first_name ? element.first_name : '-'}} </td>
+            </ng-container>
+
+            <!-- last_name column -->
+            <ng-container matColumnDef="last_name">
+                <th mat-header-cell *matHeaderCellDef> Apellido </th>
+                <td mat-cell *matCellDef="let element"> {{element.last_name ? element.last_name : '-'}} </td>
+            </ng-container>
+
             <!-- created_at column -->
             <ng-container matColumnDef="created_at">
                 <th mat-header-cell *matHeaderCellDef> Fecha de creación </th>
