--- a/src/app/modules/settings/pages/user-profile/user-profile.component.html
+++ b/src/app/modules/settings/pages/user-profile/user-profile.component.html
@@ -11,7 +11,7 @@
                 <div class="col-lg-3 order-lg-2">
                     <div class="card-profile-image">
                         <a href="javascript:void(0)">
-                            <img src="assets/img/theme/team-1-800x800.jpg" class="rounded-circle">
+                            <img src="assets/img/theme/team-3-800x800.jpg" class="rounded-circle">
                         </a>
                     </div>
                 </div>
@@ -24,8 +24,41 @@
             <div class="card-body pt-0 pt-9">
                 <div class="row">
                     <div class="col-12">
+                        <div class="file-status text-center mb-4">
+                            <progress *ngIf="file?.status === 'loading'"
+                                [ngClass]="{'completed': file?.progress === 100}" max="100"
+                                [value]="file?.progress"></progress>
+
+                            <small *ngIf="file?.name && file?.status !== 'loaded'" class="text-muted mb-2">
+                                {{ file.name }}
+                            </small>
+
+                            <small *ngIf="file?.status === 'failed'" class="text-danger">
+                                Error al subir la imagen
+                            </small>
+
+                            <small *ngIf="file?.status === 'invalid'" class="text-danger">
+                                Formato de imágen inválido <br>
+                                (debe de ser un .png, .jpg o .jpeg)
+                            </small>
+                        </div>
+
                         <div class="d-flex justify-content-center">
-                            <button class="btn btn-primary">Subir imagen</button>
+                            <ng-container *ngIf="!file || file?.status === 'invalid'">
+                                <input class="input-file" type="file" #fileInput
+                                    (change)="onFileSelected($event.target.files)">
+                                <button class="btn btn-primary" (click)="fileInput.click()">
+                                    <i class="fas fa-camera mr-2"></i>
+                                    Nueva foto de perfil
+                                </button>
+                            </ng-container>
+                            <ng-container *ngIf="file && file?.status !== 'invalid'">
+                                <button class="btn btn-primary" (click)="uploadImage()"
+                                    [disabled]="file?.status === 'loading'">
+                                    <i class="fas fa-save mr-2"></i>
+                                    Guardar foto de perfil
+                                </button>
+                            </ng-container>
                         </div>
                     </div>
                 </div>
@@ -35,28 +68,55 @@
     <div class="col-xl-8 order-xl-1">
         <div class="card shadow">
             <div class="card-body">
-                <form>
+                <form role="form" [formGroup]="form">
                     <div class="pl-lg-4">
                         <div class="row">
                             <div class="col-lg-6">
-                                <div class="form-group">
-                                    <label class="form-control-label" for="input-first-name">Nombre</label>
-                                    <input type="text" id="input-first-name"
-                                        class="form-control form-control-alternative" placeholder="Nombre" disabled>
+                                <div class="form-group mb-3">
+                                    <label class="form-control-label" for="input-name">Apellido</label>
+
+                                    <div class="input-group input-group-alternative"
+                                        [ngClass]="{'is-invalid': !name.valid && name.touched || !name.valid && name.touched}">
+                                        <input [formControl]="name" id="input-name" class="form-control"
+                                            placeholder="Nombre" type="text" autocomplete="new-name" disabled>
+                                    </div>
+
+                                    <small class="text-danger"
+                                        *ngIf="!name.valid && name.touched || !name.valid && name.touched">
+                                        Ingresa un nombre válido.
+                                    </small>
                                 </div>
                             </div>
                             <div class="col-lg-6">
-                                <div class="form-group">
+                                <div class="form-group mb-3">
                                     <label class="form-control-label" for="input-last-name">Apellido</label>
-                                    <input type="text" id="input-last-name"
-                                        class="form-control form-control-alternative" placeholder="Apellido" disabled>
+
+                                    <div class="input-group input-group-alternative"
+                                        [ngClass]="{'is-invalid': !lastName.valid && lastName.touched || !lastName.valid && lastName.touched}">
+                                        <input [formControl]="lastName" id="input-last-name" class="form-control"
+                                            placeholder="Apellido" type="text" autocomplete="new-last-name" disabled>
+                                    </div>
+
+                                    <small class="text-danger"
+                                        *ngIf="!lastName.valid && lastName.touched || !lastName.valid && lastName.touched">
+                                        Ingresa un apellido válido.
+                                    </small>
                                 </div>
                             </div>
                             <div class="col-lg-6">
                                 <div class="form-group">
                                     <label class="form-control-label" for="input-email">Email address</label>
-                                    <input type="email" id="input-email" class="form-control form-control-alternative"
-                                        disabled>
+
+                                    <div class="input-group input-group-alternative"
+                                        [ngClass]="{'is-invalid': !email.valid && email.touched || !email.valid && email.touched}">
+                                        <input [formControl]="email" class="form-control"
+                                            placeholder="Correo electrónico" type="email" disabled>
+                                    </div>
+
+                                    <small class="text-danger"
+                                        *ngIf="!email.valid && email.touched || !email.valid && email.touched">
+                                        Ingresa un correo electrónico válido.
+                                    </small>
                                 </div>
                             </div>
                         </div>
