--- a/src/app/modules/dashboard/pages/overview-latam/overview-latam.component.html
+++ b/src/app/modules/dashboard/pages/overview-latam/overview-latam.component.html
@@ -111,15 +111,15 @@
                                         *ngIf="selectedTab4 === 1 && selectedSectors?.length > 1">
                                         <li class="nav-item mb-2">
                                             <a class="nav-link p-2" [ngClass]="{'active': selectedTab5 === 1}"
-                                                (click)="selectedTab5 = 1; getDataByUsersInvOrAup(); clearUsersAndSalesTabs()">
+                                                (click)="selectedTab5 = 1; getDataByUsersInvOrAup($event); clearUsersAndSalesTabs()">
                                                 {{ 'others.all' | translate | titlecase }}
                                             </a>
                                         </li>
                                         <li class="nav-item mb-2" *ngFor="let sector of selectedSectors">
                                             <a class="nav-link p-2"
-                                                [ngClass]="{'active': sector.id + 2 === selectedTab5}"
-                                                (click)="selectedTab5 = sector.id + 2; getDataByUsersInvOrAup(null, sector)">
-                                                {{ sector.name }}
+                                                [ngClass]="{'active': selectedSectorsTab.includes(sector.id)}"
+                                                (click)="getDataByUsersInvOrAup($event, null, sector)">
+                                                {{ sector.id }} - {{ sector.name }}
                                             </a>
                                         </li>
                                     </ul>
