--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -15,10 +15,16 @@
       <li class="nav-item" ngbDropdown placement="bottom-right">
         <a class="nav-link" role="button" ngbDropdownToggle>
           <div class="media align-items-center">
-            <!-- <span class="avatar avatar-sm rounded-circle"> -->
-            <!-- <img alt="Image placeholder" src="./assets/img/theme/team-1-800x800.jpg"> -->
-            <i class="ni ni-single-02"></i>
-            <!-- </span> -->
+            <!-- user avatar -->
+            <div class="user-image">
+              <!-- without avatar -->
+              <i *ngIf="!userAvatarUrl || userAvatarUrlBroken" class="ni ni-single-02"></i>
+
+              <!-- with avatar -->
+              <div *ngIf="userAvatarUrl && !userAvatarUrlBroken" class="avatar-container">
+                <img [src]="userAvatarUrl" (error)="userAvatarUrlBroken = true">
+              </div>
+            </div>
           </div>
         </a>
         <div class="dropdown-menu-arrow dropdown-menu-right" ngbDropdownMenu>
